# goit-pythonweb-hw-06

./: alembic.ini  models.py  my_select.py  pyproject.toml  seed.py
migrations/versions/: 361895de090f_init_schema.py  835d55e6f5d3_add_grade_relationships.py
